// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField is disabled 1`] = `
<div
  className=""
>
  
  <div
    className={undefined}
  >
    <span>
      true
    </span>
  </div>
</div>
`;

exports[`FormField renders to the DOM 1`] = `
<div
  className=""
>
  
  <div
    className={undefined}
  >
    <div
      className="render-prop"
    />
  </div>
</div>
`;

exports[`FormField renders with an error 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    Add an Error
  </div>
  <div
    className={undefined}
  >
    <div
      className="render-prop"
    />
  </div>
</div>
`;

exports[`FormField renders with label 1`] = `
<div
  className=""
>
  
  <label
    aria-hidden={true}
    className={undefined}
    onClick={[Function]}
    role="presentation"
  >
    Add a Label
  </label>
  <div
    className={undefined}
  >
    <div
      className="render-prop"
    />
  </div>
</div>
`;

exports[`FormField should render an input element 1`] = `
<div
  className=""
>
  
  <div
    className={undefined}
  >
    <input />
  </div>
</div>
`;
